--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     }
     .product-photo{
       height:260px;
-      background-image:url('https://images.unsplash.com/photo-1504674900247-0877df9cc836?q=80&w=1600&auto=format&fit=crop');
+      background-image:url('https://i.imgur.com/M48G76T.jpeg');
       background-size:cover;
       background-position:center;
       border-radius:12px;
@@ -272,7 +272,7 @@
 
       <div class="hero-right" aria-hidden="false">
         <div class="product-card" id="products">
-          <div class="product-photo" role="img" aria-label="Gambar NASTEL BANG JUN"style="background-image: url('https://github.com/danielle-arch/nastelbangjun/blob/2b8451db0965700008de9f110189d5f28f229566/images/nastel.jpg'); background-size: cover; background-position: center; height: 260px; border-radius: 12px; margin-bottom: 12px; box-shadow: inset 0 -20px 40px rgba(0,0,0,0.06);"> </div>
+          <div class="product-photo" role="img" aria-label="Gambar NASTEL BANG JUN"style="background-image: url('https://i.imgur.com/M48G76T.jpeg'); background-size: cover; background-position: center; height: 260px; border-radius: 12px; margin-bottom: 12px; box-shadow: inset 0 -20px 40px rgba(0,0,0,0.06);"> </div>
           </div>
           
           <div style="text-align:left">
@@ -363,3 +363,4 @@
   </script>
 </body>
 </html>
+
